fix: extremely long name now wraps

--- a/blocks/section-bio/__uname/section-bio__uname.css
+++ b/blocks/section-bio/__uname/section-bio__uname.css
@@ -10,10 +10,11 @@
     line-height: 1.15;
     
     max-width:12ch;
-
-    text-overflow:ellipsis;
+    text-overflow:ellipsis; 
     overflow: hidden;
     /* white-space: nowrap; */
+    /* ヾ(-_- )ゞ In case of extremely long name was inserted ヾ(-_- )ゞ  */
+    word-wrap: break-word;
 }
 
 @media screen and (max-width:1024px) {
